# Desktop-Poster-

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  updater-key.pub
.claude/: launch.json
.github/workflows/: pages.yml  release.yml
docs/: agb.html  datenschutz.html  impressum.html  index.html
docs/updates/windows-x86_64/x86_64/0.2.0-beta/: index.json
docs/updates/windows-x86_64/x86_64/0.4.0-beta/: index.json
docs/updates/windows-x86_64/x86_64/0.5.0-beta/: index.json
docs/updates/windows-x86_64/x86_64/0.6.0-beta/: index.json
python-sidecar/: _constants.py.example  main.py  requirements.txt  sidecar.spec
src/: index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs  main.rs  scheduler.rs
src-tauri/src/commands/: accounts.rs  license.rs  messages.rs  mod.rs  oauth.rs  posts.rs  settings.rs  sidecar.rs  updater.rs  whatsapp.rs
src-tauri/src/db/: mod.rs  schema.sql
src/components/: Layout.tsx
src/components/Crosspost/: AICreatePost.tsx  MirrorPost.tsx  PipelinePost.tsx  PostHistory.tsx
src/pages/: AccountsPage.tsx  CrosspostPage.tsx  InboxPage.tsx  LicensePage.tsx  SettingsPage.tsx
src/store/: accounts.ts
whatsapp-sidecar/: package-lock.json  package.json  server.js
