[package]
name = "crosspost-desktop"
version = "0.1.0"
description = "CrossPost Desktop вЂ” Unified Social Media Manager"
authors = ["Andrii Pylypchuk <info@andrii-it.de>"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.4"
urlencoding = "2"
encoding_rs = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
